Stack with helidon 2.0 and neo4j 4.0